--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript"></script>
-    <link rel="icon" type="image/png" href="/images/logo.png" />
+    <link rel="icon" type="image/*" href="/images/logo.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
