--- a/main-calc/index_main_calc-0.html
+++ b/main-calc/index_main_calc-0.html
@@ -7,7 +7,7 @@
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no" />
         <script src="/script.js"></script>
-        <link rel="icon" type="image/png" href="/images/logo.png" />
+        <link rel="icon" type="image/*" href="/images/logo.ico" />
     </head>
     <body>
       <div id="wrapper">
