--- a/main-calc/index_main_calc-1.html
+++ b/main-calc/index_main_calc-1.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no" />
         <script src="/script.js"></script>
         <link rel="stylesheet" href="/main-calc/css-calcs/style-c-km.css">
+        <link rel="icon" type="image/png" href="/images/logo.png" />
     </head>
     <body>
       <div id="wrapper">
