--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="/images/logo.png" />
     <script type="text/javascript">
     </script>
-    <title>Page Redirection</title>
+    <title>Page not found</title>
   </head>
   <body>
     <div id="container">
