--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <button id="home-button" onclick="window.location.href = '/';">Home</button>
     <h id="text-contact">Contact us</h>
     <div id="form-container">
-      <h id="text-soon">We will contact you back as soon as possible</h>
+      <h id="text-soon">We will get back to you as soon as possible</h>
       <div id="form-div">
         <div id="status"></div>
         <form action="https://formspree.io/f/xdopqewd" method="POST">
