--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <datalist id="browsers">
                 <div class="dropdown-content">
                   <option class="main-options" value="Seconds to Planck Times"></option>
-                  <option class="main-options" value="2"></option>
+                  <option class="main-options" value="Meters to Planck Lengths"></option>
                   <option class="main-options" value="3"></option>
                   <option
                     class="main-options"
