--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="dropdown-content">
                   <option class="main-options" value="Seconds to Planck Times"></option>
                   <option class="main-options" value="Meters to Planck Lengths"></option>
-                  <option class="main-options" value="3"></option>
+                  <option class="main-options" value="Lightyears to Km"></option>
                   <option
                     class="main-options"
                     value="Speed of light to km/h"
