--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript"></script>
     <link rel="icon" type="image/png" href="/images/logo.png" />
+    <meta name="description" content="Sci-calc is a powerful converter used for converting special scientific units">
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="http://scicalc.tk" />
+    <meta name="keywords" content="Scicalc, scicalc, Sci, sci, Calc, calc, Scientific, scientific, Calculator, calculator, Calculate, calculate, ev, eV, planck, Planck, meters, seconds, to, speed, lightyears, light, convert, converter">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
