--- a/main-calc/calc3.html
+++ b/main-calc/calc3.html
@@ -4,7 +4,10 @@
         <title>Scientific calculator</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style-main-calc.css">
-        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+        <meta name="description" content="Sci-calc is a powerful converter used for converting special scientific units">
+        <meta name=”robots” content=”index, follow”>
+        <link rel="canonical" href="http://scicalc.tk" />
+        <meta name="keywords" content="Scicalc, scicalc, Sci, sci, Calc, calc, Scientific, scientific, Calculator, calculator, Calculate, calculate, ev, eV, planck, Planck, meters, seconds, to, speed, lightyears, light, convert, converter">
         <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no" />
         <script src="/script.js"></script>
         <link rel="stylesheet" href="/main-calc/css-calcs/meters_to_planckLength.css">
