--- a/calcs/calc3.html
+++ b/calcs/calc3.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="style-main-calc.css">
         <meta name="description" content="Sci-calc is a powerful converter used for converting special scientific units">
         <meta name=”robots” content=”index, follow”>
-        <link rel="canonical" href="http://scicalc.tk" />
+        <link rel="canonical" href="https://scicalc.tk" />
         <meta name="keywords" content="Scicalc, scicalc, Sci, sci, Calc, calc, Scientific, scientific, Calculator, calculator, Calculate, calculate, ev, eV, planck, Planck, meters, seconds, to, speed, lightyears, light, convert, converter">
         <meta name="viewport" content="width=device-width,initial-scale=1.0, maximum-scale=1, user-scalable=no" />
         <script src="/script.js"></script>
-        <link rel="stylesheet" href="/main-calc/css-calcs/meters_to_planckLength.css">
+        <link rel="stylesheet" href="/calcs/css-calcs/meters_to_planckLength.css">
         <link rel="icon" type="image/png" href="/images/logo.png" />
     </head>
     <body>
